# dspfs

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs
.github/workflows/: rust.yml
.run/: Clippy.run.xml  Test.run.xml
docs/: README.md  Requirements.md  User-Stories.md  structure.md
docs/fs/: notes.md
installation/: dspfs.service
src/: encryptedstream.rs  error.rs  main.rs
src/dspfs/: api.rs  builder.rs  client.rs  mod.rs  notify.rs  server.rs
src/fs/: file.rs  filetree.rs  hash.rs  mod.rs
src/fs/group/: heed.rs  mod.rs  notify.rs  store.rs
src/fs/local/: file.rs  group.rs  mod.rs
src/fs/local/ops/: mod.rs  nop.rs  real.rs
src/fs/shared/: file.rs  group.rs  mod.rs
src/global_store/: heed.rs  inmemory.rs  mod.rs
src/message/: mod.rs
src/node/: error.rs  mod.rs  server.rs  state.rs
src/protos/: mod.rs  test.proto
src/rest/: mod.rs
src/store/: heed.rs  inmemory.rs  mod.rs
src/store/nested/: heed.rs  inmemory.rs  mod.rs
src/stream/: client.rs  encryptedstream.rs  mod.rs  punch.rs  server.rs
src/user/: mod.rs  private.rs  public.rs
