[package]
name = "dspfs"
version = "0.1.0"
authors = ["Jonathan Donszelmann <jonabent@gmail.com>", "Victor Roest <victor@xirion.net>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
futures = "0.1"
bincode = "1.2"
serde = {version = "1.0", features=["derive"]}
tokio = {version = "0.2", features=["full"]}
x25519-dalek = {version = "0.6", features=["serde"]}
ring = "0.16"
async-trait = "0.1.31"
rand_core = "0.5.1"
#gotham = "0.4"

[build-dependencies]
protoc-grpcio = "1.2"
walkdir = "2.3"
protobuf-codegen = "2.14"
