[package]
name = "dspfs"
version = "0.1.0"
authors = ["Jonathan Donszelmann <jonabent@gmail.com>", "Victor Roest <victor@xirion.net>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
futures = "0.1"
bincode = "1.2"
serde = {version = "1.0", features=["derive"]}
tokio = {version = "0.2", features=["full"]}
ring = "0.16"
async-trait = "0.1"
#gotham = "0.4"
walkdir = "2.3"
notify = "5.0.0-pre.2"
heed = "0.7"
anyhow = "1.0"
zerocopy = "0.3"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
blake3 = "0.3"
dirs = "3.0.1"

[dev-dependencies]
mockall = "0.7.1"
tempfile = "3.1.0"
